@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{582, 67}, {747, 954}}</string>
+	<string>{{516, 86}, {1055, 933}}</string>
 </dict>
 </plist>
